--- a/server/package.json
+++ b/server/package.json
@@ -5,16 +5,20 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "tnd": "ts-node-dev src/server.ts"
+    "tnd": "ts-node-dev src/server.ts",
+    "knex:migrate": "knex --knexfile knexfile.ts migrate:latest",
+    "knex:seed": "knex --knexfile knexfile.ts seed:run"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1"
+    "knex": "^0.21.11",
+    "sqlite3": "^5.0.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.8",
+    "express": "^4.17.1",
     "ts-node": "^9.0.0",
     "ts-node-dev": "^1.0.0",
     "typescript": "^4.0.3"
