--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,6 @@
 
 # dependencies
 /node_modules
-/.pnp
-.pnp.js
 
 # testing
 /coverage
@@ -17,6 +15,9 @@
 .env.development.local
 .env.test.local
 .env.production.local
+
+# database sqlite3
+database.sqlite
 
 npm-debug.log*
 yarn-debug.log*
